--- a/Portfolio/src/stylesheets/login.css
+++ b/Portfolio/src/stylesheets/login.css
@@ -1,3 +1,4 @@
+
 input{
     outline: none;
 }
@@ -5,8 +6,8 @@ input{
     width: 300px;
 }
 .img{
-    width: 90%;
+    width: 90% !important;
 }
 .img-div{
-    width: 55%;
+    width: 55% !important;
 }
